@@ -52,6 +52,8 @@ Ring *ringAddSegment( Ring *, int node0, int node1, double *uv0, double *uv1 );
 Ring *ringSegment( Ring *, int segment, int *node0, int *node1,
 		   double *uv0, double *uv1 );
 GridBool ringSegmentsContainNode( Ring *, int node, double *uv );
+GridBool ringSurroundsSegment( Ring *, int node0, int node1,
+			       double *uv0, double *uv1 );
 
 int ringTriangles( Ring * );
 Ring *ringAddTriangle( Ring *, int node0, int node1, int node2, double *uv2 );
