@@ -98,6 +98,30 @@ class TestRing < Test::Unit::TestCase
   assert_in_delta 4.2, @ring.segmentsContainNode(4)[1], tol
  end
 
+ # evaluate canidate segment intersection with ring
+
+ def add_right_ring_segments(n0,n1,n2)
+  @ring.addSegment(0,1,n0,n1)
+  @ring.addSegment(1,2,n1,n2)
+  @ring.addSegment(2,0,n2,n0)
+ end
+
+ def test_ring_surrounds_a_completing_segment
+  n0 = [0.0,0.0] ; n1 = [1.0,0.0] ; n2 = [0.0,1.0]
+  add_right_ring_segments(n0,n1,n2)
+  assert @ring.surroundsSegment(1,0,n1,n0)
+  assert @ring.surroundsSegment(2,1,n2,n1)
+  assert @ring.surroundsSegment(0,2,n0,n2)  
+ end
+
+ def test_ring_does_not_surrounds_a_duplicate_segment
+  n0 = [0.0,0.0] ; n1 = [1.0,0.0] ; n2 = [0.0,1.0]
+  add_right_ring_segments(n0,n1,n2)
+  assert !@ring.surroundsSegment(0,1,n0,n1)
+  assert !@ring.surroundsSegment(1,2,n1,n2)
+  assert !@ring.surroundsSegment(2,0,n2,n0)  
+ end
+
  # triangles
 
  def test_adding_triangle_returns_nil_if_base_is_not_a_segment
@@ -198,22 +222,6 @@ class TestRing < Test::Unit::TestCase
   assert_in_delta 4.2, triangle[4][1], tol
   assert_in_delta 5.1, triangle[5][0], tol
   assert_in_delta 5.2, triangle[5][1], tol
- end
-
- # evaluate canidate segment intersection with ring
-
- def add_right_ring_segments(n0,n1,n2)
-  @ring.addSegment(0,1,n0,n1)
-  @ring.addSegment(1,2,n1,n2)
-  @ring.addSegment(2,0,n2,n0)
- end
-
- def test_ring_surrounds_a_completing_triangle
-  n0 = [0.0,0.0] ; n1 = [1.0,0.0] ; n2 = [0.0,1.0]
-  add_right_ring_segments(n0,n1,n2)
-  assert @ring.surroundsTriangle(0,1,2,n2)
-  assert @ring.surroundsTriangle(1,2,0,n0)
-  assert @ring.surroundsTriangle(2,0,1,n1)  
  end
 
 end
